Fix "Back to Main Page" alignment
This changes the two links to be wrapped in a new link-box
class that aligns the two elements properly.

--- a/registration/static/css/main.css
+++ b/registration/static/css/main.css
@@ -204,3 +204,8 @@ body > footer {
     color: white;
     font-weight: bold;
 }
+
+.link-box {
+    display: flex;
+    justify-content: space-between;
+}
